AV/Development/twoThreeTreeCON.css
/* Styling for the twoThreeTreeCON diagram ***********************************/

/* Sets maximum width to JSAV container */
#twoThreeTreeCON {
	padding-top: 20px;
	width: 560px;
}

/* Sets width and height to the JSAV canvas */
#twoThreeTreeCON .jsavcanvas {
	height: 200px;
	width: 560px;
}

/* Removes top margin from array objects to make the diagram a litle more compact */
#twoThreeTreeCON .jsavarray {
	margin-top: 0; 
}

/* Change the size of each array box */
.jsavarray .jsavindex {
  min-width: 33px;
  max-width: 33px;
  min-height: 30px;
  max-height: 30px;
}

/* Center text inside of array cell by making height equal to the container height */
.jsavnode .jsavvalue {
	height: 20px;
}

/* Make the font of the labels inside of the arrays smaller */
.jsavarray .jsavvaluelabel {
	font-size: .9em;
}

/* Sytling for the simpleInsertCON slide show ********************************/

/* Set maximun width for the JSAV container */
#simpleInsertCON, #simpleInsertCON .jsavoutput {
	width: 700px;
}

/* Set width and height for the JSAV canvas */
#simpleInsertCON .jsavcanvas {
	height: 250px;
	width: 700px;
	margin-left: 70px;
}

/* Align and give a little padding to the output messages of each slide */
#simpleInsertCON .jsavoutput {
	padding-top: 20px;
	text-align: center;
}

/* Sytling for the promoteCON slide show ********************************/

/* Set maximun width for the JSAV container */
#promoteCON, #promoteCON .jsavoutput {
	width: 800px;
}

/* Set width and height for the JSAV canvas */
#promoteCON .jsavcanvas {
	height: 250px;
	width: 800px;
	margin-left: 70px;
}

/* Align and give a little padding to the output messages of each slide */
#promoteCON .jsavoutput {
	padding-top: 20px;
	text-align: center;
}

/* Sytling for the splitCON slide show ********************************/

/* Set maximun width for the JSAV container */
#splitCON, #splitCON .jsavoutput {
	width: 800px;
}

/* Set width and height for the JSAV canvas */
#splitCON .jsavcanvas {
	height: 350px;
	width: 800px;
	margin-left: 70px;
}

/* Align and give a little padding to the output messages of each slide */
#splitCON .jsavoutput {
	padding-top: 20px;
	text-align: center;
}

